Removed AAT data from 159868 setup file.

--- a/Notebook_Statistics.ipynb
+++ b/Notebook_Statistics.ipynb
@@ -195,156 +195,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Export planet dataframe as a LaTeX table."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 190,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masses_table = pd.DataFrame()\n",
-    "#masses_table = masses_table.sort_values('P').sort_values('Name').reset_index()\n",
-    "masses_table['Name'] = masses_planet['hostname']\n",
-    "masses_table['Msini (MJup)'] = masses_planet['mass_med']\n",
-    "masses_table['a (AU)'] = masses_planet['axis_med']\n",
-    "masses_table['P (d)'] = masses_planet['per_med']\n",
-    "masses_table['e'] = masses_planet['e_med']\n",
-    "\n",
-    "names = np.unique(np.array(masses_table.Name))\n",
-    "\n",
-    "nplanets = np.array(masses_table.groupby('Name').count()['e'])\n",
-    "db_nplanets = pd.DataFrame({'Name':names, 'nplanets':nplanets})\n",
-    "masses_table = pd.merge(masses_table, db_nplanets, on='Name').reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "namedict = {0:' b', 1:' c', 2:' d', 3:' e', 4:' f', 5:' g', 6:' h', 7:' i'}\n",
-    "\n",
-    "for name in names:\n",
-    "    masses_name = masses_table.query('Name == \"{}\"'.format(name))\n",
-    "    numbah = len(masses_name)\n",
-    "    pl_index = 0\n",
-    "    for index in np.arange(numbah) + masses_name.index[0]:\n",
-    "        masses_table.loc[index, 'Name'] += namedict[pl_index]  \n",
-    "        pl_index += 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Write custom code to generate LaTeX table for whole planet catalog."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "masses_planet['Name'] = masses_table['Name']\n",
-    "\n",
-    "def round_to_1(x):\n",
-    "    return round(x, -int(floor(log10(x))))\n",
-    "def round_sig(x, sig=2):\n",
-    "    return round(x, sig-int(floor(log10(abs(x))))-1) #log10(abs(x))\n",
-    "round_sig_vec = np.vectorize(round_sig)\n",
-    "def round_to_reference(x, y):\n",
-    "    return round(x, -int(floor(log10(y))))\n",
-    "round_to_ref_vec = np.vectorize(round_to_reference)\n",
-    "\n",
-    "# Round errors and parameters with significant figures.\n",
-    "masses_planet['mass_err_plus_r']  = round_sig_vec(np.array(masses_planet['mass_plus'] - masses_planet['mass_med']))\n",
-    "masses_planet['mass_err_minus_r'] = round_sig_vec(np.array(masses_planet['mass_med'] - masses_planet['mass_minus']))\n",
-    "masses_planet['mass_err_av']      = round_sig_vec(0.5*(masses_planet['mass_err_plus_r'] + masses_planet['mass_err_minus_r']))\n",
-    "masses_planet['mass_med_r']       = round_to_ref_vec(np.array(masses_planet['mass_med']), masses_planet['mass_err_av'])\n",
-    "\n",
-    "masses_planet['axis_err_plus_r']  = round_sig_vec(np.array(masses_planet['axis_plus'] - masses_planet['axis_med']))\n",
-    "masses_planet['axis_err_minus_r'] = round_sig_vec(np.array(masses_planet['axis_med'] - masses_planet['axis_minus']))\n",
-    "masses_planet['axis_err_av']      = round_sig_vec(0.5*(masses_planet['axis_err_plus_r'] + masses_planet['axis_err_minus_r']))\n",
-    "masses_planet['axis_med_r']       = round_to_ref_vec(np.array(masses_planet['axis_med']), masses_planet['axis_err_av'])\n",
-    "\n",
-    "masses_planet['per_err_plus_r']   = round_sig_vec(np.array(masses_planet['per_plus'] - masses_planet['per_med']))\n",
-    "masses_planet['per_err_minus_r']  = round_sig_vec(np.array(masses_planet['per_med'] - masses_planet['per_minus']))\n",
-    "masses_planet['per_err_av']       = round_sig_vec(0.5*(masses_planet['per_err_plus_r'] + masses_planet['per_err_minus_r']))\n",
-    "masses_planet['per_med_r']        = round_to_ref_vec(np.array(masses_planet['per_med']), masses_planet['per_err_av'])\n",
-    "\n",
-    "masses_planet['e_err_plus_r']     = round_sig_vec(np.array(masses_planet['e_plus'] - masses_planet['e_med']))\n",
-    "masses_planet['e_err_minus_r']    = round_sig_vec(np.array(masses_planet['e_med'] - masses_planet['e_minus']))\n",
-    "masses_planet['e_err_av']         = round_sig_vec(0.5*(masses_planet['e_err_plus_r'] + masses_planet['e_err_minus_r']))\n",
-    "masses_planet['e_med_r']          = round_to_ref_vec(np.array(masses_planet['e_med']), masses_planet['e_err_av'])\n",
-    "'''\n",
-    "masses_planet['tc_err_plus_r']     = round_sig_vec(np.array(masses_planet['tc_plus'] - masses_planet['tc_med']))\n",
-    "masses_planet['tc_err_minus_r']    = round_sig_vec(np.array(masses_planet['tc_med'] - masses_planet['tc_minus']))\n",
-    "masses_planet['tc_err_av']         = round_sig_vec(0.5*(masses_planet['tc_err_plus_r'] + masses_planet['tc_err_minus_r']))\n",
-    "masses_planet['tc_med_r']          = round_to_ref_vec(np.array(masses_planet['tc_med']), masses_planet['tc_err_av'])\n",
-    "\n",
-    "masses_planet['w_err_plus_r']     = round_sig_vec(np.array(masses_planet['w_plus'] - masses_planet['w_med']))\n",
-    "masses_planet['w_err_minus_r']    = round_sig_vec(np.array(masses_planet['w_med'] - masses_planet['w_minus']))\n",
-    "masses_planet['w_err_av']         = round_sig_vec(0.5*(masses_planet['w_err_plus_r'] + masses_planet['w_err_minus_r']))\n",
-    "masses_planet['w_med_r']          = round_to_ref_vec(np.array(masses_planet['w_med']), masses_planet['w_err_av'])\n",
-    "'''\n",
-    "tex_writer = open('legacy_tables/planet_table.tex', 'w')\n",
-    "tex_writer.write(r'\\begin{tabular}{lrrrr}')\n",
-    "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'\\toprule' + ' \\n')\n",
-    "tex_writer.write(r'\\midrule' + ' \\n')\n",
-    "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & P [d] & e \\\\' + ' \\n')\n",
-    "tex_writer.write(r'\\toprule' + ' \\n')\n",
-    "\n",
-    "for index, row in masses_planet.iterrows():\n",
-    "    # Customize names.\n",
-    "    namein = str(row['Name'])\n",
-    "    if namein[0] == 'h':\n",
-    "        namein = namein[:3].upper() + ' ' + namein[3:]\n",
-    "    elif namein[0] == 'g':\n",
-    "        namein = namein[:2].upper() + ' ' + namein[2:]\n",
-    "    elif namein[0] == 'b':\n",
-    "        namein = namein[:2].upper() + namein[2:]\n",
-    "    else:\n",
-    "        namein = 'HD ' + namein\n",
-    "\n",
-    "    massin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(row['mass_med_r'], \n",
-    "                                                   row['mass_err_plus_r'], \n",
-    "                                                   row['mass_err_minus_r']) + r'$'\n",
-    "    axisin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(row['axis_med_r'], \n",
-    "                                                   row['axis_err_plus_r'], \n",
-    "                                                   row['axis_err_minus_r']) + r'$'\n",
-    "    periin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(row['per_med_r'], \n",
-    "                                                   row['per_err_plus_r'], \n",
-    "                                                   row['per_err_minus_r']) + r'$'\n",
-    "    eccein = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(row['e_med_r'], \n",
-    "                                                   row['e_err_plus_r'], \n",
-    "                                                   row['e_err_minus_r']) + r'$'\n",
-    "    '''\n",
-    "    tcin = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(row['tc_med_r'], \n",
-    "                                                 row['tc_err_plus_r'], \n",
-    "                                                 row['tc_err_minus_r']) + r'$'\n",
-    "    win = r'$' + '{0}^{{+{1}}}_{{-{2}}}'.format(row['w_med_r'], \n",
-    "                                                row['w_err_plus_r'], \n",
-    "                                                row['w_err_minus_r']) + r'$'\n",
-    "    '''\n",
-    "    \n",
-    "    tex_writer.write('{0} & {1} & {2} & {3} & {4} \\\\\\\\ \\n'.format(\n",
-    "                     namein, massin, axisin, periin, eccein))\n",
-    "    \n",
-    "tex_writer.write(r'\\bottomrule' + ' \\n')\n",
-    "tex_writer.write(r'\\end{tabular}' + ' \\n')\n",
-    "tex_writer.close()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Pull Specmatch metallicities into planet properties. In 'Masses_good_with_specmatch'."
    ]
   },
@@ -387,161 +237,6 @@
    "outputs": [],
    "source": [
     "imaging_spec = m_good_spec.query('name in [\"145675\", \"111031\", \"26161\", \"213472\", \"203473\", \"127506\", \"150554\"]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>e_med</th>\n",
-       "      <th>iso_mass</th>\n",
-       "      <th>mass</th>\n",
-       "      <th>mass_minus</th>\n",
-       "      <th>axis</th>\n",
-       "      <th>axis_minus</th>\n",
-       "      <th>axis_med</th>\n",
-       "      <th>axis_plus</th>\n",
-       "      <th>iso_logage</th>\n",
-       "      <th>iso_logage_err1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>145675</td>\n",
-       "      <td>0.366356</td>\n",
-       "      <td>0.997165</td>\n",
-       "      <td>4.910311</td>\n",
-       "      <td>4.787921</td>\n",
-       "      <td>2.857071</td>\n",
-       "      <td>2.816439</td>\n",
-       "      <td>2.856997</td>\n",
-       "      <td>2.896420</td>\n",
-       "      <td>10.022388</td>\n",
-       "      <td>0.078579</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>145675</td>\n",
-       "      <td>0.465702</td>\n",
-       "      <td>0.997165</td>\n",
-       "      <td>5.930104</td>\n",
-       "      <td>5.341438</td>\n",
-       "      <td>15.947416</td>\n",
-       "      <td>13.998808</td>\n",
-       "      <td>17.505125</td>\n",
-       "      <td>23.071287</td>\n",
-       "      <td>10.022388</td>\n",
-       "      <td>0.078579</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>111031</td>\n",
-       "      <td>0.326113</td>\n",
-       "      <td>1.144993</td>\n",
-       "      <td>12.056604</td>\n",
-       "      <td>17.629905</td>\n",
-       "      <td>12.811619</td>\n",
-       "      <td>17.297921</td>\n",
-       "      <td>24.715374</td>\n",
-       "      <td>33.583950</td>\n",
-       "      <td>9.759124</td>\n",
-       "      <td>0.126760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>103</th>\n",
-       "      <td>213472</td>\n",
-       "      <td>0.566000</td>\n",
-       "      <td>1.049956</td>\n",
-       "      <td>3.299509</td>\n",
-       "      <td>2.644000</td>\n",
-       "      <td>10.830312</td>\n",
-       "      <td>11.110000</td>\n",
-       "      <td>13.750000</td>\n",
-       "      <td>19.400000</td>\n",
-       "      <td>9.913873</td>\n",
-       "      <td>0.094715</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>26161</td>\n",
-       "      <td>0.753400</td>\n",
-       "      <td>1.112582</td>\n",
-       "      <td>4.672000</td>\n",
-       "      <td>4.041000</td>\n",
-       "      <td>14.940000</td>\n",
-       "      <td>11.750000</td>\n",
-       "      <td>14.940000</td>\n",
-       "      <td>19.090000</td>\n",
-       "      <td>9.696456</td>\n",
-       "      <td>0.116003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>127506</td>\n",
-       "      <td>0.691684</td>\n",
-       "      <td>0.722771</td>\n",
-       "      <td>35.571482</td>\n",
-       "      <td>34.587518</td>\n",
-       "      <td>3.370110</td>\n",
-       "      <td>3.325292</td>\n",
-       "      <td>3.373408</td>\n",
-       "      <td>3.421595</td>\n",
-       "      <td>9.795882</td>\n",
-       "      <td>0.251746</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       name     e_med  iso_mass       mass  mass_minus       axis  axis_minus  \\\n",
-       "0    145675  0.366356  0.997165   4.910311    4.787921   2.857071    2.816439   \n",
-       "1    145675  0.465702  0.997165   5.930104    5.341438  15.947416   13.998808   \n",
-       "17   111031  0.326113  1.144993  12.056604   17.629905  12.811619   17.297921   \n",
-       "103  213472  0.566000  1.049956   3.299509    2.644000  10.830312   11.110000   \n",
-       "120   26161  0.753400  1.112582   4.672000    4.041000  14.940000   11.750000   \n",
-       "220  127506  0.691684  0.722771  35.571482   34.587518   3.370110    3.325292   \n",
-       "\n",
-       "      axis_med  axis_plus  iso_logage  iso_logage_err1  \n",
-       "0     2.856997   2.896420   10.022388         0.078579  \n",
-       "1    17.505125  23.071287   10.022388         0.078579  \n",
-       "17   24.715374  33.583950    9.759124         0.126760  \n",
-       "103  13.750000  19.400000    9.913873         0.094715  \n",
-       "120  14.940000  19.090000    9.696456         0.116003  \n",
-       "220   3.373408   3.421595    9.795882         0.251746  "
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "imaging_spec[['name', 'e_med', 'iso_mass', 'mass', 'mass_minus', 'axis', 'axis_minus', 'axis_med', 'axis_plus', 'iso_logage', 'iso_logage_err1']]"
    ]
   },
   {
@@ -9007,7 +8702,9 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
