Ported Jump setup file for 75732 over to the legacy catalog.

--- a/Notebook_Tables.ipynb
+++ b/Notebook_Tables.ipynb
@@ -32,13 +32,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('legacy_tables/system_props_719.csv')\n",
-    "specmatch = pd.read_csv('/Users/lee/Academics/Astronomy/Planets/legacy_analysis/legacy_tables/legacy_specmatch_medians.csv')\n",
+    "sys_props   = pd.read_csv('legacy_tables/system_props_719.csv')\n",
+    "stellar     = pd.read_csv('/Users/lee/Academics/Astronomy/Planets/legacy_analysis/legacy_tables/legacy_specmatch_medians.csv')\n",
     "masses_only = pd.read_csv('legacy_tables/planet_list_719.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replace NaNs with dummy values, for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stellar = stellar.fillna(100.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       10.872633\n",
+       "1        0.995520\n",
+       "2        0.847684\n",
+       "3        1.134055\n",
+       "4        0.705415\n",
+       "5        3.521337\n",
+       "6        1.042461\n",
+       "7        0.883259\n",
+       "8        0.922064\n",
+       "9        0.877352\n",
+       "10       0.541821\n",
+       "11       0.888111\n",
+       "12       1.315520\n",
+       "13       0.738911\n",
+       "14       0.785043\n",
+       "15       1.182713\n",
+       "16       0.609717\n",
+       "17       3.509724\n",
+       "18       0.820426\n",
+       "19       0.740713\n",
+       "20       1.799408\n",
+       "21       1.475974\n",
+       "22       0.941694\n",
+       "23       1.148642\n",
+       "24       0.983059\n",
+       "25       1.695650\n",
+       "26       0.708423\n",
+       "27       1.326872\n",
+       "28       0.873234\n",
+       "29       1.189164\n",
+       "          ...    \n",
+       "715      0.757601\n",
+       "716    100.000000\n",
+       "717      0.552128\n",
+       "718      0.619479\n",
+       "719      0.611346\n",
+       "720      0.490483\n",
+       "721      0.629802\n",
+       "722      0.656603\n",
+       "723      0.564297\n",
+       "724      0.573959\n",
+       "725      0.750085\n",
+       "726      0.561458\n",
+       "727      0.621757\n",
+       "728      0.513376\n",
+       "729      0.598386\n",
+       "730      0.582023\n",
+       "731      0.551040\n",
+       "732      0.641038\n",
+       "733      0.740958\n",
+       "734      0.561664\n",
+       "735      0.659810\n",
+       "736      0.551882\n",
+       "737      0.569042\n",
+       "738      0.656584\n",
+       "739      0.581982\n",
+       "740      1.125570\n",
+       "741      1.339110\n",
+       "742      0.521268\n",
+       "743      0.644921\n",
+       "744      1.885604\n",
+       "Name: iso_radius, Length: 745, dtype: float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stellar.iso_radius"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make table for planet parameters."
    ]
   },
   {
@@ -96,20 +200,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def round_to_1(x):\n",
+    "    if np.isnan(x):\n",
+    "        return 0.0001\n",
+    "    else:\n",
+    "        return round(x, -int(floor(log10(x))))\n",
+    "\n",
+    "def round_sig(x, sig=2):\n",
+    "    return round(x, sig-int(floor(log10(abs(x)))) - 1) \n",
+    "round_sig_vec = np.vectorize(round_sig)\n",
+    "def round_to_reference(x, y):\n",
+    "    return round(x, -int(floor(log10(abs(y)))) + 1)\n",
+    "round_to_ref_vec = np.vectorize(round_to_reference)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "masses_planet['Name'] = masses_table['Name']\n",
-    "\n",
-    "def round_to_1(x):\n",
-    "    return round(x, -int(floor(log10(x))))\n",
-    "def round_sig(x, sig=2):\n",
-    "    return round(x, sig-int(floor(log10(abs(x))))-1) #log10(abs(x))\n",
-    "round_sig_vec = np.vectorize(round_sig)\n",
-    "def round_to_reference(x, y):\n",
-    "    return round(x, -int(floor(log10(y))))\n",
-    "round_to_ref_vec = np.vectorize(round_to_reference)\n",
     "\n",
     "# Round errors and parameters with significant figures.\n",
     "masses_planet['mass_err_plus_r']  = round_sig_vec(np.array(masses_planet['mass_plus'] - masses_planet['mass_med']))\n",
@@ -143,12 +272,12 @@
     "masses_planet['w_med_r']          = round_to_ref_vec(np.array(masses_planet['w_med']), masses_planet['w_err_av'])\n",
     "'''\n",
     "tex_writer = open('legacy_tables/planet_table.tex', 'w')\n",
-    "tex_writer.write(r'\\begin{tabular}{lrrrr}')\n",
+    "tex_writer.write(r'\\begin{longtable*}{lrrrr}')\n",
     "tex_writer.write('\\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "tex_writer.write(r'\\midrule' + ' \\n')\n",
     "tex_writer.write('\\n')\n",
-    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & P [d] & e \\\\' + ' \\n')\n",
+    "tex_writer.write(r'Name & \\msini\\ [\\mjup] & a [AU] & $P$ [d] & $e$ \\\\' + ' \\n')\n",
     "tex_writer.write(r'\\toprule' + ' \\n')\n",
     "\n",
     "for index, row in masses_planet.iterrows():\n",
@@ -188,7 +317,163 @@
     "                     namein, massin, axisin, periin, eccein))\n",
     "    \n",
     "tex_writer.write(r'\\bottomrule' + ' \\n')\n",
-    "tex_writer.write(r'\\end{tabular}' + ' \\n')\n",
+    "tex_writer.write(r'\\end{longtable*}' + ' \\n')\n",
+    "tex_writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Make table for stellar parameters. TO-DO: COMBINE SYNTHETIC/EMPIRICAL SPECTRAL PARAMETERS, USE APPROPRIATE SET FOR EACH STAR. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## THIS COMBINATION SHOULD BE DONE IN THE SPECMATCH SELECTION NOTEBOOK."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      110.0\n",
+       "1      110.0\n",
+       "2      110.0\n",
+       "3      110.0\n",
+       "4      110.0\n",
+       "5      110.0\n",
+       "6      110.0\n",
+       "7      110.0\n",
+       "8      110.0\n",
+       "9      110.0\n",
+       "10     110.0\n",
+       "11     110.0\n",
+       "12     110.0\n",
+       "13      70.0\n",
+       "14     110.0\n",
+       "15     110.0\n",
+       "16      70.0\n",
+       "17     110.0\n",
+       "18     110.0\n",
+       "19     110.0\n",
+       "20     110.0\n",
+       "21     110.0\n",
+       "22     110.0\n",
+       "23     110.0\n",
+       "24     110.0\n",
+       "25     110.0\n",
+       "26     110.0\n",
+       "27     110.0\n",
+       "28     110.0\n",
+       "29     110.0\n",
+       "       ...  \n",
+       "715     70.0\n",
+       "716     70.0\n",
+       "717     70.0\n",
+       "718     70.0\n",
+       "719     70.0\n",
+       "720     70.0\n",
+       "721     70.0\n",
+       "722     70.0\n",
+       "723     70.0\n",
+       "724     70.0\n",
+       "725    110.0\n",
+       "726     70.0\n",
+       "727     70.0\n",
+       "728     70.0\n",
+       "729     70.0\n",
+       "730     70.0\n",
+       "731     70.0\n",
+       "732    110.0\n",
+       "733    110.0\n",
+       "734    110.0\n",
+       "735    110.0\n",
+       "736     70.0\n",
+       "737     70.0\n",
+       "738    110.0\n",
+       "739     70.0\n",
+       "740    110.0\n",
+       "741    110.0\n",
+       "742     70.0\n",
+       "743     70.0\n",
+       "744    110.0\n",
+       "Name: teff_err_emp, Length: 745, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stellar.teff_err_emp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specmatch parameters first. TO-DO: COMBINE SYNTHETIC/EMPIRICIAL RESULTS. MAKE COLUMN WITH SYN/EMP\n",
+    "stellar['teff_err_r'] = round_sig_vec(stellar['teff_err_emp'])\n",
+    "stellar['teff_r'] = round_to_ref_vec(np.array(stellar['teff_emp']), stellar['teff_err_r'])\n",
+    "stellar['fe_err_r'] = round_sig_vec(stellar['fe_err'])\n",
+    "stellar['fe_r'] = round_to_ref_vec(np.array(stellar['fe']), stellar['fe_err_r'])\n",
+    "\n",
+    "# USE ISOCLASSIFY OUTPUTS FOR R AND LOGG, SINCE SPECMATCH-SYN AND -EMP EACH ONLY PRODUCE ONE. \n",
+    "# FIX FIX FIX FIX FIX FIX FIX FIX FIX FIX FIX\n",
+    "stellar['logg_err_r'] = round_sig_vec(stellar['logg_err'])\n",
+    "stellar['logg_r'] = round_to_ref_vec(np.array(stellar['logg']), stellar['logg_err_r'])\n",
+    "stellar['radius_err_r'] = round_sig_vec(0.5*(stellar['iso_radius_err1'] + stellar['iso_radius_err2']))\n",
+    "stellar['radius_r'] = round_to_ref_vec(np.array(stellar['iso_radius']), stellar['radius_err_r'])\n",
+    "\n",
+    "# Now isoclassify.\n",
+    "stellar['mass_err_r'] = round_sig_vec(0.5*(stellar['iso_mass_err1'] + stellar['iso_mass_err2']))\n",
+    "stellar['mass_r'] = round_to_ref_vec(np.array(stellar['iso_mass']), stellar['mass_err_r'])\n",
+    "\n",
+    "\n",
+    "tex_writer = open('legacy_tables/stellar_table.tex', 'w')\n",
+    "tex_writer.write(r'\\begin{longtable*}{lrrrrr}')\n",
+    "tex_writer.write('\\n')\n",
+    "tex_writer.write(r'\\toprule' + ' \\n')\n",
+    "tex_writer.write(r'\\midrule' + ' \\n')\n",
+    "tex_writer.write('\\n')\n",
+    "tex_writer.write(r'Name & $T_{\\textrm{eff}}$ [K] & [Fe/H] & log$g$ [log(cm s$^{-2}$)] & $M$ [\\msun\\] & $R$ [\\rsun\\] \\\\' + ' \\n')\n",
+    "tex_writer.write(r'\\toprule' + ' \\n')\n",
+    "\n",
+    "for index, row in stellar.iterrows():\n",
+    "    # Customize names.\n",
+    "    namein = str(row['name'])\n",
+    "    if namein[0] == 'h':\n",
+    "        namein = namein[:3].upper() + ' ' + namein[3:]\n",
+    "    elif namein[0] == 'g':\n",
+    "        namein = namein[:2].upper() + ' ' + namein[2:]\n",
+    "    elif namein[0] == 'b':\n",
+    "        namein = namein[:2].upper() + namein[2:]\n",
+    "    else:\n",
+    "        namein = 'HD ' + namein\n",
+    "\n",
+    "    teff_str   = r'$' + '{0}\\\\pm {1}'.format(row['teff_r'], row['teff_err_r']) + r'$'    \n",
+    "    fe_str     = r'$' + '{0}\\\\pm {1}'.format(row['fe_r'], row['fe_err_r']) + r'$'    \n",
+    "    logg_str   = r'$' + '{0}\\\\pm {1}'.format(row['logg_r'], row['logg_err_r']) + r'$' \n",
+    "    radius_str = r'$' + '{0}\\\\pm {1}'.format(row['radius_r'], row['radius_err_r']) + r'$'      \n",
+    "    mass_str   = r'$' + '{0}\\\\pm {1}'.format(row['mass_r'], row['mass_err_r']) + r'$'\n",
+    "\n",
+    "    tex_writer.write('{0} & {1} & {2} & {3} & {4} & {5} \\\\\\\\ \\n'.format(\n",
+    "                     namein, teff_str, fe_str, logg_str, radius_str, mass_str))\n",
+    "    \n",
+    "tex_writer.write(r'\\bottomrule' + ' \\n')\n",
+    "tex_writer.write(r'\\end{longtable*}' + ' \\n')\n",
     "tex_writer.close()"
    ]
   },
