Added 75732 to setup list.

--- a/Notebook_Joker.ipynb
+++ b/Notebook_Joker.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import numpy as np\n",
     "from scipy import stats\n",
     "import pandas as pd\n",
