Fixed data loading in 120066 setup file.

--- a/Notebook_Joker.ipynb
+++ b/Notebook_Joker.ipynb
@@ -162,24 +162,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5h 15min 41s, sys: 4min 47s, total: 5h 20min 29s\n",
-      "Wall time: 5h 25min 1s\n"
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '74866' (I am process '74867')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/lee/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.5-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '74866' (I am process '74868')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/lee/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.5-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '74866' (I am process '74869')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/lee/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.5-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '74866' (I am process '74870')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/lee/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.5-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '74866' (I am process '74871')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/lee/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.5-64/lock_dir\n",
+      "INFO (theano.gof.compilelock): Waiting for existing lock by process '74866' (I am process '74872')\n",
+      "INFO (theano.gof.compilelock): To manually release the lock, delete /Users/lee/.theano/compiledir_Darwin-18.7.0-x86_64-i386-64bit-i386-3.7.5-64/lock_dir\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "'''\n",
     "prior_samples = params.sample(2*10**8)\n",
     "with schwimmbad.SerialPool() as pool:\n",
     "    joker = tj.TheJoker(params, pool=pool)\n",
-    "    samples = joker.rejection_sample([rvdata_j, rvdata_k], prior_samples)"
+    "    samples = joker.rejection_sample([rvdata_j, rvdata_k], prior_samples)\n",
+    "'''   \n",
+    "prior_cache_file = 'prior_samples.hdf5'\n",
+    "if not os.path.exists(prior_cache_file):\n",
+    "    prior_samples = params.sample(2*10**6)\n",
+    "    prior_samples.write(prior_cache_file)\n",
+    "\n",
+    "with schwimmbad.MultiPool() as pool:\n",
+    "    joker = tj.TheJoker(params, pool=pool)\n",
+    "    samples = joker.rejection_sample([rvdata_j, rvdata_k], prior_cache_file)"
    ]
   },
   {
